--- a/watch/one-piece-episode-1.html
+++ b/watch/one-piece-episode-1.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html prefix="og: http://ogp.me/ns#" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script>
+<html prefix="og: http://ogp.me/ns#" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script>
 
     <title>Watch One Piece Episode 1 English Subbed on DogBarkAnime</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -41,7 +41,7 @@ var site_config = {
     'domain': 'DogBarkAnime.me',
     'disqus': 'random-co6vnxqche.disqus.com',
 }
-</script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script></head>
+</script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script></head>
 
 
 <body data-page="movie_watch" style="">
@@ -194,9 +194,9 @@ var site_config = {
         </a>
         <div id="search">
             <div class="search-content">
-                <form action="/search" autocomplete="off" data-dashlane-rid="d155d3941a82feb6">
-                    <input type="text" class="form-control search-input" name="keyword" id="searching" placeholder="Search anime..." required="" data-dashlane-rid="f32c4dd3a5d901a9">
-                    <button type="submit" class="search-icon" data-dashlane-rid="8435ee91bdc559ac"><i class="fas fa-search"></i></button>
+                <form action="/search" autocomplete="off" data-dashlane-rid="e76fc35ebb41a8f4">
+                    <input type="text" class="form-control search-input" name="keyword" id="searching" placeholder="Search anime..." required="" data-dashlane-rid="b9e2f866d30e47f6">
+                    <button type="submit" class="search-icon" data-dashlane-rid="25482f838e51db6c"><i class="fas fa-search"></i></button>
                 </form>
             </div>
         </div>
@@ -331,7 +331,7 @@ var site_config = {
                                         </div>
 
 
-                                        <iframe id="iframeAddAttribute" name="iframe-to-load" frameborder="0" scrolling="no" allow="accelerometer;autoplay;encrypted-media;gyroscope;picture-in-picture" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" src="https://player.anikatsu.me/?id=one-piece-episode-1" data-dashlane-frameid="7868"></iframe>
+                                        <iframe id="iframeAddAttribute" name="iframe-to-load" frameborder="0" scrolling="no" allow="accelerometer;autoplay;encrypted-media;gyroscope;picture-in-picture" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" src="https://player.anikatsu.me?id=one-piece-episode-1" data-dashlane-frameid="7887"></iframe>
                                     </div>
                                     <div class="player-controls">
                                         <div class="pc-item pc-resize">
@@ -422,9 +422,9 @@ var site_config = {
                                                             <div class="ssc-label">List of episodes:</div>
                                                         </div>
                                                     </div>
-                                                    <div class="ssc-quick" data-dashlane-rid="bb4cbd790e17028b" data-form-type="">
+                                                    <div class="ssc-quick" data-dashlane-rid="2bed5eb92f77dca9" data-form-type="">
                                                         <div class="sscq-icon"><i class="fas fa-search"></i></div>
-                                                        <input id="search-ep" class="form-control" type="text" placeholder="Search EP #" autocomplete="off" data-dashlane-rid="2344e7e8544e49c7" data-form-type="">
+                                                        <input id="search-ep" class="form-control" type="text" placeholder="Search EP #" autocomplete="off" data-dashlane-rid="d7dda5dc345a7a4b" data-form-type="">
                                                     </div>
                                                     <div class="clearfix"></div>
                                                 </div>
@@ -14232,6 +14232,7 @@ var site_config = {
         }
         </script>
     </div>
+
 
 
 
