--- a/watch/one-piece-episode-1.html
+++ b/watch/one-piece-episode-1.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html prefix="og: http://ogp.me/ns#" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script>
+<html prefix="og: http://ogp.me/ns#" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script>
 
     <title>Watch One Piece Episode 1 English Subbed on DogBarkAnime</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -41,7 +41,7 @@ var site_config = {
     'domain': 'DogBarkAnime.me',
     'disqus': 'random-co6vnxqche.disqus.com',
 }
-</script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script></head>
+</script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script></head>
 
 
 <body data-page="movie_watch" style="">
@@ -194,9 +194,9 @@ var site_config = {
         </a>
         <div id="search">
             <div class="search-content">
-                <form action="/search" autocomplete="off" data-dashlane-rid="9137cdc1dbbeb50a" data-form-type="">
-                    <input type="text" class="form-control search-input" name="keyword" id="searching" placeholder="Search anime..." required="" data-dashlane-rid="7b713dae54c1a8be" data-form-type="">
-                    <button type="submit" class="search-icon" data-dashlane-rid="263c7885ab36a119" data-dashlane-label="true" data-form-type=""><i class="fas fa-search"></i></button>
+                <form action="/search" autocomplete="off" data-dashlane-rid="4dafec3afae9bcc9" data-form-type="">
+                    <input type="text" class="form-control search-input" name="keyword" id="searching" placeholder="Search anime..." required="" data-dashlane-rid="17785e66d0a35d6b" data-form-type="">
+                    <button type="submit" class="search-icon" data-dashlane-rid="04470ff76780b60e" data-dashlane-label="true" data-form-type=""><i class="fas fa-search"></i></button>
                 </form>
             </div>
         </div>
@@ -331,7 +331,7 @@ var site_config = {
                                         </div>
 
 
-                                        <iframe id="iframeAddAttribute" name="iframe-to-load" frameborder="0" scrolling="no" allow="accelerometer;autoplay;encrypted-media;gyroscope;picture-in-picture" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" src="https://player.anikatsu.me/?id=one-piece-episode-1" data-dashlane-frameid="7911"></iframe>
+                                        <iframe id="iframeAddAttribute" name="iframe-to-load" frameborder="0" scrolling="no" allow="accelerometer;autoplay;encrypted-media;gyroscope;picture-in-picture" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" src="https://player.anikatsu.me/?id=one-piece-episode-1" data-dashlane-frameid="8177"></iframe>
                                     </div>
                                     <div class="player-controls">
                                         <div class="pc-item pc-resize">
@@ -399,10 +399,10 @@ var site_config = {
                                             <div class="ps__-title"><i class="fas fa-server mr-2"></i>SERVERS:</div>
                                             <div class="ps__-list">
                                                 <div class="item">
-                                                    <a id="server1" href="https://player.anikatsu.me/?id=one-piece-episode-1" target="iframe-to-load" class="btn btn-server">SUB</a>
+                                                    <a id="server1" href="https://player.anikatsu.me/?id=one-piece-episode-1" target="iframe-to-load" class="btn btn-server active">SUB</a>
                                                 </div>
                                                 <div class="item">
-                                                    <a id="server2" href="https://player.anikatsu.me/?id=one-piece-dub-episode-1" target="iframe-to-load" class="btn btn-server active">DUB</a>
+                                                    <a id="server2" href="https://player.anikatsu.me/?id=one-piece-dub-episode-1" target="iframe-to-load" class="btn btn-server">DUB</a>
                                                 </div>
                                             </div>
                                             <div class="clearfix"></div>
@@ -421,9 +421,9 @@ var site_config = {
                                                             <div class="ssc-label">List of episodes:</div>
                                                         </div>
                                                     </div>
-                                                    <div class="ssc-quick" data-dashlane-rid="7cd4a50b881df39a" data-form-type="">
+                                                    <div class="ssc-quick" data-dashlane-rid="a5a8a2d5885ff817" data-form-type="">
                                                         <div class="sscq-icon"><i class="fas fa-search"></i></div>
-                                                        <input id="search-ep" class="form-control" type="text" placeholder="Search EP #" autocomplete="off" data-dashlane-rid="2103b2b6d7aca419" data-form-type="">
+                                                        <input id="search-ep" class="form-control" type="text" placeholder="Search EP #" autocomplete="off" data-dashlane-rid="4b51aa2ed1af5789" data-form-type="">
                                                     </div>
                                                     <div class="clearfix"></div>
                                                 </div>
@@ -14231,6 +14231,7 @@ var site_config = {
         }
         </script>
     </div>
+
 
 
 
