--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html prefix="og: http://ogp.me/ns#" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script>
+<html prefix="og: http://ogp.me/ns#" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-tiresias-page-script.js" id="dashlane_tiresias"></script><script src="chrome-extension://fdjamakpfbbddfjaooikfcpapjohcfmg/content/pageScripts/dashlane-webauthn-page-script.js" id="dashlane_webauthn" name="forward_webauthn_ready"></script>
     <title>DogBarkAnime - Official DogBarkAnime #1 Watch High Quality Anime Online Without Ads</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -25,7 +25,7 @@
     <meta property="og:image:height" content="350">
     <meta name="apple-mobile-web-app-status-bar" content="#202125">
     <meta name="theme-color" content="#202125">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css?v=1.0" type="text/css"><link rel="shortcut icon" href="https://dogbarkanime.netlify.app/favicon.ico?v=1.0" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css?v=1.0" type="text/css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css?v=1.0" type="text/css"><link rel="shortcut icon" href="https://dogbarkanime.netlify.app/favicon.ico?v=1.0" type="image/x-icon">
     <link rel="apple-touch-icon" href="https://dogbarkanime.netlify.app/favicon.ico?v=1.0">
     <link rel="stylesheet" href="https://dogbarkanime.netlify.app/files/css/style.css?v=1.0">
 
@@ -59,7 +59,7 @@
 if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('https://dogbarkanime.netlify.app/sw.js');
 };
-</script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script></head>
+</script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script><script src="chrome-extension://njgehaondchbmjmajphnhlojfnbfokng/js/contentScripts/dom.js"></script></head>
 
 
 <body data-page="page_home" style="">
@@ -212,9 +212,9 @@ if ('serviceWorker' in navigator) {
         </a>
         <div id="search">
             <div class="search-content">
-                <form action="/search" autocomplete="off" data-dashlane-rid="ba502faa7de45d65" data-form-type="">
-                    <input type="text" class="form-control search-input" name="keyword" id="searching" placeholder="Search anime..." required="" data-dashlane-rid="57a33fe7ef51424c" data-form-type="">
-                    <button type="mit" class="search-icon" data-dashlane-rid="ae810ab9bbd18fed" data-dashlane-label="true" data-form-type=""><i class="fas fa-search"></i></button>
+                <form action="/search" autocomplete="off" data-dashlane-rid="a543295d162e7afb" data-form-type="">
+                    <input type="text" class="form-control search-input" name="keyword" id="searching" placeholder="Search anime..." required="" data-dashlane-rid="1faa8ea810cdd14c" data-form-type="">
+                    <button type="mit" class="search-icon" data-dashlane-rid="1b31d88289849403" data-dashlane-label="true" data-form-type=""><i class="fas fa-search"></i></button>
                 </form>
             </div>
         </div>
@@ -309,7 +309,7 @@ if ('serviceWorker' in navigator) {
         <div class="deslide-wrap">
             <div class="container" style="max-width:100%!important;width:100%!important;">
                 <div id="slider" class="swiper-container-initialized swiper-container-horizontal">
-                    <div class="swiper-wrapper" style="transform: translate3d(-791px, 0px, 0px); transition-duration: 0ms;"><div class="swiper-slide swiper-slide-duplicate swiper-slide-prev" data-swiper-slide-index="9" style="width: 791px;">
+                    <div class="swiper-wrapper" style="transform: translate3d(-2373px, 0px, 0px); transition-duration: 0ms;"><div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="9" style="width: 791px;">
                             <div class="deslide-item">
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
@@ -347,7 +347,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="clearfix"></div>
                             </div>
                         </div>
-                        <div class="swiper-slide swiper-slide-active" data-swiper-slide-index="0" style="width: 791px;">
+                        <div class="swiper-slide" data-swiper-slide-index="0" style="width: 791px;">
                             <div class="deslide-item">
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
@@ -393,7 +393,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="clearfix"></div>
                             </div>
                         </div>
-                        <div class="swiper-slide swiper-slide-next" data-swiper-slide-index="1" style="width: 791px;">
+                        <div class="swiper-slide swiper-slide-prev" data-swiper-slide-index="1" style="width: 791px;">
                             <div class="deslide-item">
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
@@ -441,7 +441,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="clearfix"></div>
                             </div>
                         </div>
-                        <div class="swiper-slide" data-swiper-slide-index="2" style="width: 791px;">
+                        <div class="swiper-slide swiper-slide-active" data-swiper-slide-index="2" style="width: 791px;">
                             <div class="deslide-item">
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
@@ -489,7 +489,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="clearfix"></div>
                             </div>
                         </div>
-                        <div class="swiper-slide" data-swiper-slide-index="3" style="width: 791px;">
+                        <div class="swiper-slide swiper-slide-next" data-swiper-slide-index="3" style="width: 791px;">
                             <div class="deslide-item">
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
@@ -723,7 +723,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="clearfix"></div>
                             </div>
                         </div>
-                        <div class="swiper-slide swiper-slide-duplicate-prev" data-swiper-slide-index="9" style="width: 791px;">
+                        <div class="swiper-slide" data-swiper-slide-index="9" style="width: 791px;">
                             <div class="deslide-item">
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
@@ -761,7 +761,7 @@ if ('serviceWorker' in navigator) {
                                 <div class="clearfix"></div>
                             </div>
                         </div>
-                    <div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-active" data-swiper-slide-index="0" style="width: 791px;">
+                    <div class="swiper-slide swiper-slide-duplicate" data-swiper-slide-index="0" style="width: 791px;">
                             <div class="deslide-item">
                                 <div class="deslide-cover">
                                     <div class="deslide-cover-img">
@@ -807,14 +807,14 @@ if ('serviceWorker' in navigator) {
                                 <div class="clearfix"></div>
                             </div>
                         </div></div>
-                    <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"><span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 3"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 5"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 6"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 7"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 8"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 9"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 10"></span></div>
+                    <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets"><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 1"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 3"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 5"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 6"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 7"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 8"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 9"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 10"></span></div>
                     <div class="swiper-navigation">
                         <div class="swiper-button swiper-button-next" tabindex="0" role="button" aria-label="Next slide"><i class="fas fa-angle-right"></i></div>
                         <div class="swiper-button swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide"><i class="fas fa-angle-left"></i></div>
                     </div>
                     <div class="clearfix"></div>
                     <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-                <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
+                <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
             </div>
         </div>
     </div>
@@ -1122,7 +1122,7 @@ if ('serviceWorker' in navigator) {
                         </div>
                         <div class="clearfix"></div>
                         <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-                    <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
+                    <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
                     <div class="trending-navi">
                         <div class="navi-next" tabindex="0" role="button" aria-label="Next slide" aria-disabled="false"><i class="fas fa-angle-right"></i>
                         </div>
@@ -1141,7 +1141,7 @@ if ('serviceWorker' in navigator) {
                                 <section class="block_area block_area_home">
                     <div class="block_area-header">
                         <div class="float-left bah-heading mr-4">
-                            <h2 class="cat-heading">Trending</h2>
+                            <h2 class="cat-heading">Latest</h2>
                         </div>
                         <div class="float-right viewmore">
                             <a class="btn" href="/latest/bed">View more<i class="fas fa-angle-right ml-2"></i></a>
@@ -1836,6 +1836,7 @@ if ('serviceWorker' in navigator) {
     <link rel="stylesheet" href="https://dogbarkanime.netlify.app/files/css/jquery-ui.css?v=1.0">
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js?v=1.0"></script>
     
+
 
 
 
