--- a/moto-moto.html
+++ b/moto-moto.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" href="moto.css">
+  <link rel="stylesheet" href="files/css/moto.css">
   </head>
 <body>
   <div class='video'>
