--- a/404.html
+++ b/404.html
@@ -9,5 +9,17 @@
 error was encountered while trying to use an ErrorDocument to handle the request.</p>
 <hr>
 
+<audio id="myAudio">
+  <source src="squidward.wav" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 
+<script>
+  document.addEventListener("keydown", function(event) {
+    if (event.key === 4") {
+      var audio = document.getElementById("myAudio");
+      audio.play();
+    }
+  });
+</script>
 </body></html>
