--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@ error was encountered while trying to use an ErrorDocument to handle the request
 <hr>
 
 <audio id="myAudio">
-  <source src="squidward.wav" type="audio/mpeg">
+  <source src="/squidward.wav" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
