--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@ error was encountered while trying to use an ErrorDocument to handle the request
 
 <script>
   document.addEventListener("keydown", function(event) {
-    if (event.key === 4") {
+    if (event.key === "4") {
       var audio = document.getElementById("myAudio");
       audio.play();
     }
